fix: use health endpoint for healthcheck

--- a/ha-config-history/Dockerfile
+++ b/ha-config-history/Dockerfile
@@ -61,7 +61,7 @@ ENV GIN_MODE=release
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:40613/configs || exit 1
+  CMD wget --no-verbose --tries=1 --spider http://localhost:40613/health || exit 1
 
 # Run the application
 CMD ["./ha-config-history"]
