--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -23,3 +23,19 @@ jobs:
         with:
           version: v2.1
           working-directory: ./ha-config-history
+
+  svelte:
+    name: svelte-check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+      - name: Install dependencies
+        run: |
+          cd ha-config-history/frontend
+          npm install
+      - name: Run svelte-check
+        run: |
+          cd ha-config-history/frontend
+          npx svelte-check --tsconfig ./tsconfig.json
