--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: HA Config History
-url: https://github.com/eddymoulton/ha-config-history
+name: Eddy's HA Addons
+url: https://github.com/eddymoulton/ha-addons
 maintainer: Eddy Moulton
